# djangocms-katex

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: lint.yml  publish-to-test-pypi.yml
djangocms_katex/: cms_plugins.py  forms.py  models.py
djangocms_katex/locale/de/LC_MESSAGES/: django.po
djangocms_katex/locale/en/LC_MESSAGES/: django.po
djangocms_katex/migrations/: 0001_initial.py  0002_alter_katex_katex_display_style.py
djangocms_katex/static/djangocms_katex/admin/css/: preview.css
djangocms_katex/static/djangocms_katex/admin/js/: preview.js
djangocms_katex/templates/djangocms_katex/: formula.html
djangocms_katex/templates/djangocms_katex/admin/: katex.html  katex_widget.html
