[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "djangocms-katex"
dynamic = ["version"]
description = "Provides plugin to render formulae in django CMS"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Fabian Braun", email = "fsbraun@gmx.de" },
]
keywords = [
    "KaTeX",
    "django CMS",
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django CMS :: 3.10",
    "Framework :: Django CMS :: 3.11",
    "Framework :: Django CMS :: 3.8",
    "Framework :: Django CMS :: 3.9",
    "Framework :: Django CMS :: 4.0",
    "Framework :: Django CMS :: 4.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "django-cms",
]

[project.optional-dependencies]
static-ace = [
    "djangocms-static-ace",
]

[project.urls]
Homepage = "https://github.com/fsbraun/djangocms-katex"

[tool.hatch.version]
path = "djangocms_katex/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/djangocms_katex",
]

[tool.black]
exclude = [
    ".git",
    ".hg",
    ".tox",
    "venv",
    ".venv",
    "_build",
    "build",
    "dist"
]

[tool.djlint]
ignore="H023,T003,H006,H031,D018,H021,H025"
profile="django"

[tool.ruff]
exclude = [
    ".env",
    ".venv",
    "**/migrations/**",
]
ignore = [
    "E501",  # line too long
    "F403",  # 'from module import *' used; unable to detect undefined names
    "E701",  # multiple statements on one line (colon)
    "F401",  # module imported but unused
]
line-length = 119
select = [
    "I",
    "E",
    "F",
    "W",
]
