[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "djangocms-katex"
description = "Provides plugin to render formulae in django CMS"
readme = "README.md"
keywords = [
  "django CMS",
  "KaTeX",
]
license = "MIT"
authors = [
  { name = "Fabian Braun", email = "fsbraun@gmx.de" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "Framework :: Django CMS :: 3.8",
  "Framework :: Django CMS :: 3.9",
  "Framework :: Django CMS :: 3.10",
  "Framework :: Django CMS :: 3.11",
  "Framework :: Django CMS :: 4.0",
  "Framework :: Django CMS :: 4.1",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [ "version" ]
dependencies = [
  "django-cms",
]

optional-dependencies.static-ace = [
  "djangocms-static-ace",
]
urls.Homepage = "https://github.com/fsbraun/djangocms-katex"

[tool.hatch.version]
path = "djangocms_katex/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/djangocms_katex",
]

[tool.black]
exclude = [
  ".git",
  ".hg",
  ".tox",
  "venv",
  ".venv",
  "_build",
  "build",
  "dist",
]

[tool.ruff]
line-length = 119
exclude = [
  "**/migrations/**",
  ".env",
  ".venv",
]
lint.ignore = [
  "E501", # line too long
  "F403", # 'from module import *' used; unable to detect undefined names
  "E701", # multiple statements on one line (colon)
  "F401", # module imported but unused
]
lint.select = [
  "I",
  "E",
  "F",
  "W",
]

[tool.djlint]
ignore = "H023,T003,H006,H031,D018,H021,H025"
profile = "django"
